--- a/Weather-WSP/WeatherDTOs/WeatherDTOs.csproj
+++ b/Weather-WSP/WeatherDTOs/WeatherDTOs.csproj
@@ -40,11 +40,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="history_search.cs">
+      <DependentUpon>WeatherEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="location.cs">
+      <DependentUpon>WeatherEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User\LoginUser.cs" />
+    <Compile Include="user.cs">
+      <DependentUpon>WeatherEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="WeatherEDM.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WeatherEDM.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Weather\" />
+    <Folder Include="CustomObjects\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="WeatherEDM.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>WeatherEDM.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
