added front project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Weather-WSP/WeatherAPI/bin/*
 Weather-WSP/WeatherAPI/obj/*
 Weather-WSP/WeatherDTOs/bin/*
 Weather-WSP/WeatherDTOs/obj/*
+Weather-WSP/WeatherFront/bin/*
+Weather-WSP/WeatherFront/obj/*
